# monosea

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  sample_bazel_cmds.sh
cpp_proj/: BUILD
go_proj/github.com/httran13/gomoda/: BUILD.bazel  go.mod  go.sum  hello.go
go_proj/simple_proj_a/: BUILD.bazel  hello.go
java_proj/java_proja/javaproja/: .project  BUILD  pom.xml
java_proj/java_proja/javaproja/src/main/java/com/httran13/monosea/: ProjA.java
java_proj/java_proja/javaproja/src/main/java/com/httran13/monosea/config/: MvcConfiguration.java
java_proj/java_proja/javaproja/src/main/java/com/httran13/monosea/controller/: HomeController.java
java_proj/java_proja/javaproja/src/main/webapp/WEB-INF/: web.xml
