load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "simple_proj_a_lib",
    srcs = ["hello.go"],
    importpath = "github.com/httran13/monosea/go_proj/simple_proj_a",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "simple_proj_a",
    embed = [":simple_proj_a_lib"],
    visibility = ["//visibility:public"],
)
